# cc-buddy-bridge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: windows-11-manual-validation.md
src/cc_buddy_bridge/: ble.py  cli.py  daemon.py  folder_push.py  hud.py  installer.py  ipc.py  jsonl_tailer.py  logging_setup.py  matchers.py  notifier.py  protocol.py  service.py  service_macos.py  service_windows.py  state.py  transport.py
src/cc_buddy_bridge/hooks/: _client.py  stop.py
tests/: test_folder_push.py  test_installer.py  test_jsonl_tailer.py  test_logging_setup.py  test_matchers.py  test_notifier.py  test_protocol.py  test_service.py  test_service_windows.py  test_transport.py
